umol-io/tests/mol_parsing/snapshots/mol_parsing__mol_parsing_suite__run_conformance_test@chebi_CHEBI_58540.mol.snap
---
source: umol-io/tests/mol_parsing/mod.rs
expression: results
---
expected_category: molecule
category: molecule
molecule:
  success: true
  summary:
    sum_formula: C110N2O39P2-6
    atom_count: 153
    bond_count: 156
    property_count: 0
molecule_lenient:
  success: true
  summary:
    sum_formula: C110N2O39P2-6
    atom_count: 153
    bond_count: 156
    property_count: 0
extended_molecule:
  success: true
  extended_summary:
    sum_formula: C110N2O39P2-6
    atom_count: 153
    bond_count: 156
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
extended_molecule_lenient:
  success: true
  extended_summary:
    sum_formula: C110N2O39P2-6
    atom_count: 153
    bond_count: 156
    extended_atoms: 0
    extended_bonds: 0
    property_count: 0
    rgroup_count: 0
    sgroup_count: 0
